Fix main content shifting while hovering over aside menu

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1281,6 +1281,7 @@ h3 {
   white-space: nowrap;
   display: flex;
   flex-direction: column;
+  flex: 0 0 auto;
   transition: width 0.2s ease-in-out;
 }
 .aside__profile {
